# intern-training

./: README.md  pyproject.toml
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/detection/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
backend/detection/migrations/: 0001_initial.py
backend/detection/templates/: index.html
detection_service/: network_detection.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Detections.vue
frontend/src/plugins/: vuetify.js
network_scanner/: network_scanner.py
restreamer/: restreamer.py
