[project]
name = "intern-training"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "channels (>=4.2.2,<5.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "ultralytics (>=8.3.150,<9.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "daphne (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
